--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 
 body{
-    font-family: roboto, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+}
+
+.header{
+    height: 72px;
+    background-color: #1F2937;
+    color: #f9faf8;
+}
+
+.quotes{
+    height: 72px;
+    background-color: #E5E7EB;
+}
+
+.action{
+    height: 72px;
+    background-color: #3882F6;
+}
+
+.footer{
+    height: 72px;
 }
