--- a/style.css
+++ b/style.css
@@ -3,24 +3,78 @@ body{
     font-family: Roboto, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.content{
+    
+    
 }
 
 .header{
     height: 72px;
     background-color: #1F2937;
     color: #f9faf8;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
 }
 
 .quotes{
-    height: 72px;
+    
     background-color: #E5E7EB;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: light italic;
+    flex:1;
+    display: flex;
 }
 
 .action{
     height: 72px;
     background-color: #3882F6;
+    flex: 1;
+    display: flex;
 }
 
 .footer{
     height: 72px;
+    background-color: #1F2937;
+    display: flex;
+    margin-top: auto;
+    justify-content: center;
+    align-items: center;
 }
+
+.card{
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+    width: 100px;
+    padding: 10px;
+    margin: 16px;
+}
+
+.main{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 32px;
+    font-size: 10px;
+
+  }
+
+  ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 5px;
+    display: flex;
+    gap: 10px;
+  }
+
+  a{
+    color: white;
+    text-decoration: none;
+  }
