--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body{
 }
 
 .content{
-    
-    
+       
 }
 
 .header{
@@ -20,6 +19,12 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 5px;
+}
+
+.hero {
+    height: 72px;
+    background-color: #1F2937;
+    color: #f9faf8;
 }
 
 .quotes{
