Rearrange hero section, add content and button

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;  
 }
 
 .content{
@@ -22,9 +22,23 @@ body{
 }
 
 .hero {
-    height: 72px;
+    display: flex;
     background-color: #1F2937;
-    color: #f9faf8;
+    color: #f9faf8;  
+}
+
+.hero-right{
+    width: 50vh;
+    background-color: gray;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
+.hero-left{
+    width: 50vh;
+    padding: 10px;
+    margin: 10px;
 }
 
 .quotes{
@@ -40,8 +54,8 @@ body{
 .action{
     height: 72px;
     background-color: #3882F6;
-    flex: 1;
     display: flex;
+    flex-shrink: 0;
 }
 
 .footer{
@@ -82,4 +96,26 @@ body{
   a{
     color: white;
     text-decoration: none;
+  }
+
+  .main-text{
+    font-weight: extra-bold;
+    font-size: 48px;
+    color: #F9FAF8;
+  }
+
+  .subtext{
+    font-size: 18px;
+    color: #E5E7EB;
+  }
+
+  .button{
+    background-color: #3882F6;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    font-size: 16px;
+    text-align: center;
+    padding: 8px;
+    margin: 4px 2px;
   }
